<?xml version="1.0"?>
<package>
  <name>ahl_common</name>
  <version>1.0.0</version>
  <description>
    <p>Metapackage that contains packages used widely</p>
  </description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_common</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <metapackage/>
  </export>
</package>
