<?xml version="1.0"?>
<package>
  <name>ahl_gazebo_interface</name>
  <version>0.0.0</version>
  <description>The ahl_gazebo_interface package</description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/ahl_gazebo_interface</url> -->
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ahl_utils</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>ahl_utils</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>roscpp</run_depend>
</package>
