<?xml version="1.0"?>
<package>
  <name>kalman_filter</name>
  <version>0.0.0</version>
  <description>The kalman_filter package</description>
  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/kalman_filter</url> -->
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
</package>
