<?xml version="1.0"?>
<package>
  <name>cv_wrapper</name>
  <version>1.0.0</version>
  <description>
    This package provides implementations of OpenCV's wrappers.
  </description>

  <maintainer email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/cv_wrapper</url> -->
  <author email="daichi.yoshikawa@gmail.com">Daichi Yoshikawa</author> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
